# RottingApple

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/rotten-app/: Cargo.toml
crates/rotten-app/src/: audio.rs  cli.rs  main.rs  mirror.rs
crates/rotten-capture/: Cargo.toml
crates/rotten-capture/src/: backend.rs  dxgi.rs  lib.rs  linux.rs  virtual_display.rs
crates/rotten-core/: Cargo.toml
crates/rotten-core/src/: config.rs  debug_log.rs  device.rs  error.rs  lib.rs  ntp.rs  platform.rs  session.rs
crates/rotten-crypto/: Cargo.toml  build.rs
crates/rotten-crypto/src/: chacha.rs  chacha64.rs  ed25519_pair.rs  fairplay.rs  fairplay_setup.rs  fpsap_helper.rs  hkdf_keys.rs  legacy_srp.rs  lib.rs  mirror_aes.rs  mirror_crypto.rs  pair_verify.rs  srp.rs  srp_modulus.txt
crates/rotten-discovery/: Cargo.toml
crates/rotten-discovery/src/: browser.rs  lib.rs  resolve.rs
crates/rotten-pairing/: Cargo.toml
crates/rotten-pairing/src/: credentials.rs  homekit.rs  legacy_pin.rs  lib.rs  prompt.rs  tlv.rs
crates/rotten-probe/: Cargo.toml
crates/rotten-probe/src/: main.rs
crates/rotten-protocol/: Cargo.toml
crates/rotten-protocol/src/: airplay_conn.rs  audio_rtp.rs  fp_setup.rs  http.rs  lib.rs  mirror.rs  mirror_rtsp.rs  ntp.rs  pair_verify.rs  rtsp.rs
crates/rotten-video/: Cargo.toml
crates/rotten-video/src/: encoder.rs  lib.rs  mirror_packet.rs  pacing.rs  stream.rs  synthetic.rs
scripts/: build-windows.sh
tools/fpsap-helper/: LICENSE  go.mod  main.go
tools/fpsap-helper/fpemu/: fpexchange_data.go  fpexchange_interp.go
