[package]
name = "rotten-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = { workspace = true }
hex = { workspace = true }
mdns-sd = { workspace = true }
plist = { workspace = true }
reqwest = { workspace = true }
rotten-core = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
