[package]
name = "rotten-pairing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
plist = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rotten-core = { workspace = true }
rotten-crypto = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
